@@ -6,7 +6,7 @@
 '\" See the file "license.terms" for information on usage and redistribution
 '\" of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 '\" 
-'\" RCS: @(#) $Id: CrtTrace.3,v 1.3 2002/02/10 20:36:33 kennykb Exp $
+'\" RCS: @(#) $Id: CrtTrace.3,v 1.4 2002/03/25 16:35:14 msofer Exp $
 '\" 
 .so man.macros
 .TH Tcl_CreateTrace 3 "" Tcl "Tcl Library Procedures"
@@ -35,7 +35,7 @@ invoked as immediate consequences of executing top-level commands
 (procedure bodies, bracketed commands, etc.) and so on.
 .AP int flags in
 Flags governing the trace execution.  See below for details.
-.AP Tcl_CmdObjTraceProc *proc in
+.AP Tcl_CmdObjTraceProc *objProc in
 Procedure to call for each command that's executed.  See below for
 details of the calling sequence.
 .AP Tcl_CmdTraceProc *proc in
