@@ -1,3 +1,9 @@
+2002-03-25  Miguel Sofer  <msofer@users.sourceforge.net>
+
+	* doc/CrtTrace.3: small doc correction
+	* generic/tclBasic.c (Tcl_DeleteTrace): Allow NULL callback on
+	trace deletions [Bug 534728] (Hemang Lavana).
+
 2002-03-24  Miguel Sofer  <msofer@users.sourceforge.net>
 
 	* generic/tclBasic.c (Tcl_EvalObjv): replaced obscure, incorrect
